--- a/Train_YOLO_Models.ipynb
+++ b/Train_YOLO_Models.ipynb
@@ -100,7 +100,7 @@
             "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
             "|                                         |                        |               MIG M. |\n",
             "|=========================================+========================+======================|\n",
-            "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
+            "|   0  Tesla T4                       ON |   00000000:00:04.0 ON |                    0 |\n",
             "| N/A   44C    P8             11W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
             "|                                         |                        |                  N/A |\n",
             "+-----------------------------------------+------------------------+----------------------+\n",
@@ -110,7 +110,7 @@
             "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
             "|        ID   ID                                                               Usage      |\n",
             "|=========================================================================================|\n",
-            "|  No running processes found                                                             |\n",
+            "|                                                                                         |\n",
             "+-----------------------------------------------------------------------------------------+\n"
           ]
         }
